--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,3 @@
-1.0.4
-restructured code
-added upscaled art textures
-fixed rep. bar positioning on rep. gain
-fixed max level textures showing some times
+1.0.5
+changed to use UIPARENT_MANAGED_FRAME_POSITIONS to position pet/stance action bar
+removed pet/stance action bar art
